add data protection link

--- a/orc_site/templates/page.html
+++ b/orc_site/templates/page.html
@@ -195,6 +195,9 @@
               <a class="footer-link" href="{{imprint_url}}">Imprint</a>
           </span>
           <span class="footer-span">
+              <a class="footer-link" href="{{data_protection_url}}">Data protection</a>
+          </span>
+          <span class="footer-span">
               &copy; GESIS
           </span>
       </div>
