--- a/jupyterhub/docker/k8s_hub/templates/page.html
+++ b/jupyterhub/docker/k8s_hub/templates/page.html
@@ -248,6 +248,9 @@
               <a class="footer-link" href="https://www.gesis.org/en/institute/imprint/">Imprint</a>
           </span>
           <span class="footer-span">
+              <a class="footer-link" href="https://www.gesis.org/en/institute/data-protection/">Data protection</a>
+          </span>
+          <span class="footer-span">
               &copy; GESIS
           </span>
       </div>
