--- a/jupyterhub/docker/k8s_hub/templates/admin.html
+++ b/jupyterhub/docker/k8s_hub/templates/admin.html
@@ -1,4 +1,4 @@
-{% extends "admin_base.html" %}
+{% extends "templates/admin.html" %}
 
 {% block thead %}
 {{ th("User (%i)" % users|length, 'name') }}
@@ -10,30 +10,32 @@
 {% endblock thead %}
 
 {% block user_row scoped %}
-{% if u.encrypted_auth_state %}
-  {% set auth_state = u.encrypted_auth_state|decrypt %}
-  {% set auth_state_result = auth_state.result() %}
-{% endif %}
 <td class="name-col col-sm-2">{{u.name}}</td>
-<td class="email-col col-sm-2">{% if u.encrypted_auth_state and auth_state_result["Givenname"] %}{{auth_state_result["Givenname"]}}{% endif %}</td>
-<td class="email-col col-sm-2">{% if u.encrypted_auth_state and auth_state_result["sn"] %}{{auth_state_result["sn"]}}{% endif %}</td>
+<td class="email-col col-sm-2">{{ u.gn }}</td>
+<td class="email-col col-sm-2">{{ u.sn }}</td>
 <td class="admin-col col-sm-2">{% if u.admin %}admin{% endif %}</td>
-<td class="time-col col-sm-3">{{u.last_activity.isoformat() + 'Z'}}</td>
+<td class="time-col col-sm-3">
+{%- if u.last_activity -%}
+{{ u.last_activity.isoformat() + 'Z' }}
+{%- else -%}
+Never
+{%- endif -%}
+</td>
 <td class="server-col col-sm-2 text-center">
-  <span role="button" class="stop-server btn btn-xs btn-danger {% if not u.running %}hidden{% endif %}">stop server</span>
-  <span role="button" class="start-server btn btn-xs btn-success {% if u.running %}hidden{% endif %}">start server</span>
+<a role="button" class="stop-server btn btn-xs btn-danger {% if not u.running %}hidden{% endif %}">stop server</a>
+<a role="button" class="start-server btn btn-xs btn-primary {% if u.running %}hidden{% endif %}">start server</a>
 </td>
 <td class="server-col col-sm-1 text-center">
-  {% if admin_access %}
-  <span role="button" class="access-server btn btn-xs btn-success {% if not u.running %}hidden{% endif %}">access server</span>
-  {% endif %}
+{% if admin_access %}
+<a role="button" class="access-server btn btn-xs btn-primary {% if not u.running %}hidden{% endif %}">access server</a>
+{% endif %}
 </td>
 <td class="edit-col col-sm-1 text-center">
-  <span role="button" class="edit-user btn btn-xs btn-primary">edit</span>
+<a role="button" class="edit-user btn btn-xs btn-primary">edit</a>
 </td>
 <td class="edit-col col-sm-1 text-center">
-  {% if u.name != user.name %}
-  <span role="button" class="delete-user btn btn-xs btn-danger">delete</span>
-  {% endif %}
+{% if u.name != user.name %}
+<a role="button" class="delete-user btn btn-xs btn-danger">delete</a>
+{% endif %}
 </td>
 {% endblock user_row %}
