--- a/jupyterhub/docker/k8s_hub/templates/spawn_pending.html
+++ b/jupyterhub/docker/k8s_hub/templates/spawn_pending.html
@@ -19,7 +19,7 @@
   </div>
   <div class="row">
     <div class="col-md-8 col-md-offset-2">
-      <details id="progress-details">z
+      <details id="progress-details">
         <summary>Event log</summary>
         <div id="progress-log"></div>
       </details>
