--- a/orc_site/templates/page.html
+++ b/orc_site/templates/page.html
@@ -191,11 +191,14 @@
           <span class="footer-span">
               <img src="/static/images/leibniz_logo_en_white.svg" width="78" height="54" alt="Leibniz Logo"/>
           </span>
-          <span class="footer-span">
-              <a class="footer-link" href="{{imprint_url}}">Imprint</a>
+          <span class="footer-span" style="padding-right: 0;">
+              <a class="footer-link" href="{{imprint_url}}">Imprint</a> |
+          </span>
+          <span class="footer-span" style="padding-right: 0;">
+              <a class="footer-link" href="{{data_protection_url}}">Data protection</a> |
           </span>
           <span class="footer-span">
-              <a class="footer-link" href="{{data_protection_url}}">Data protection</a>
+              <a class="footer-link" href="{{tou_url}}">Terms of Use</a>
           </span>
           <span class="footer-span">
               &copy; GESIS
