--- a/binderhub/templates/loading.html
+++ b/binderhub/templates/loading.html
@@ -34,6 +34,26 @@ div#log-container {
   </div>
 </div>
 
+{% block preview %}
+{# we can only produce an nbviewer URL for github right now #}
+{% set prefix, repo_ref = provider_spec.split('/', 1) %}
+{% if prefix == "gh" %}
+<div class="preview container" style="width: 100%;">
+<p class="preview-text text-center">
+Here's a non-interactive preview on
+<a href="https://nbviewer.jupyter.org">nbviewer</a>
+while we start a server for you.
+Your binder will open automatically when it is ready.
+</p>
+{% set repo, ref = repo_ref.rsplit('/', 1) %}
+<div id="nbviewer-preview">
+  <iframe
+    src="https://nbviewer.jupyter.org/github/{{repo}}/{{'blob' if filepath else 'tree'}}/{{ref}}/{% if filepath %}{{ filepath }}{% endif %}"
+  ></iframe>
+</div>
+</div>
+{% endif %}
+{% endblock preview %}
 <div class="row form-group"></div>
 <div class="row form-group"></div>
 {% endblock main %}
