--- a/jupyterhub/docker/k8s_hub/templates/admin.html
+++ b/jupyterhub/docker/k8s_hub/templates/admin.html
@@ -11,10 +11,10 @@
 {% endblock thead %}
 
 {% block user_row scoped %}
-<td class="name-col col-sm-2">{{u.name}}</td>
-<td class="email-col col-sm-2">{{ u.gn }}</td>
-<td class="email-col col-sm-2">{{ u.sn }}</td>
-<td class="admin-col col-sm-2">{% if u.admin %}admin{% endif %}</td>
+<td class="email-col col-sm-2">{{u.name}}</td>
+<td class="name-col col-sm-1">{{ u.gn }}</td>
+<td class="name-col col-sm-1">{{ u.sn }}</td>
+<td class="admin-col col-sm-1">{% if u.admin %}admin{% endif %}</td>
 <td class="time-col col-sm-3">
 {%- if u.last_activity -%}
 {{ u.last_activity.isoformat() + 'Z' }}
@@ -22,8 +22,9 @@
 Never
 {%- endif -%}
 </td>
-<td class="time-col col-sm-3">{{ u.created.isoformat() + 'Z' }}</td>
-<td class="server-col col-sm-2 text-center">
+{#<td class="time-col col-sm-3">{{ u.created.isoformat() + 'Z' }}</td>#}
+<td class="time-col col-sm-3">{{ u.created.strftime('%Y.%m.%d %H:%M:%S') }}</td>
+<td class="server-col col-sm-1 text-center">
 <a role="button" class="stop-server btn btn-xs btn-danger {% if not u.running %}hidden{% endif %}">stop server</a>
 <a role="button" class="start-server btn btn-xs btn-primary {% if u.running %}hidden{% endif %}">start server</a>
 </td>
