fix Launch JLab button

--- a/jupyterhub/docker/singleuser/templates/page.html
+++ b/jupyterhub/docker/singleuser/templates/page.html
@@ -40,7 +40,7 @@
     <a href='#'
        class='btn btn-default btn-sm navbar-btn pull-right'
        style='margin-right: 4px; margin-left: 2px;'
-       onclick="window.open(window.location.href.replace(/\/tree([\?\/\#].*)?$/,'/lab'));"
+       onclick="window.open(window.location.href.replace(/\/(tree|notebooks)([\?\/\#].*)?$/,'/lab'));"
     >
         Launch JupyterLab
     </a>
