update bhub appendix

--- a/binderhub/appendix/templates/login.html
+++ b/binderhub/appendix/templates/login.html
@@ -2,7 +2,7 @@
 {% block site %}
 
 <div id="ipython-main-app" class="container">
-  <h1>You can't access this Binder</h1>
+  <h1>Binder inaccessible</h1>
   <h2>
     You can get a new Binder for this repo by clicking <a href="{{binder_url}}">here</a>.
   </h2>
