Popular repos (hour,day,week,month, all time)

--- a/orc_site/templates/gallery.html
+++ b/orc_site/templates/gallery.html
@@ -11,7 +11,7 @@
 
 
 {% block main %}
-
+<h1>Most popular repositories in last hour</h1>
 <table class="table table-hover">
   <thead>
     <tr>
@@ -23,7 +23,7 @@
     </tr>
   </thead>
   <tbody>
-    {% for repo_name, repo_data in popular_repos %}
+    {% for repo_name, repo_data in popular_repos_1h[:10] %}
     <tr>
         <td><a href="{{ repo_data[3] }}" target="_blank">{{ repo_name }}</a></td>
         <td>{{ repo_data[0] }}</td>
@@ -36,4 +36,110 @@
     {% endfor %}
   </tbody>
 </table>
+<h1>Most popular repositories in last day</h1>
+<table class="table table-hover">
+  <thead>
+    <tr>
+      <th scope="col">Repo</th>
+      <th scope="col">Origin</th>
+      <th scope="col">Provider</th>
+      <th scope="col">Launches</th>
+      <th scope="col"></th>
+    </tr>
+  </thead>
+  <tbody>
+    {% for repo_name, repo_data in popular_repos_1d[:10] %}
+    <tr>
+        <td><a href="{{ repo_data[3] }}" target="_blank">{{ repo_name }}</a></td>
+        <td>{{ repo_data[0] }}</td>
+        <td>{{ repo_data[1] }}</td>
+        <td>{{ repo_data[2] }}</td>
+        <td><a href="{{ repo_data[4] }}" target="_blank">
+            <img src="https://notebooks.gesis.org/binder/badge.svg">
+        </a></td>
+    </tr>
+    {% endfor %}
+  </tbody>
+</table>
+
+<h1>Most popular repositories in last week</h1>
+    <table class="table table-hover">
+  <thead>
+    <tr>
+      <th scope="col">Repo</th>
+      <th scope="col">Origin</th>
+      <th scope="col">Provider</th>
+      <th scope="col">Launches</th>
+      <th scope="col"></th>
+    </tr>
+  </thead>
+  <tbody>
+    {% for repo_name, repo_data in popular_repos_1w[:10] %}
+    <tr>
+        <td><a href="{{ repo_data[3] }}" target="_blank">{{ repo_name }}</a></td>
+        <td>{{ repo_data[0] }}</td>
+        <td>{{ repo_data[1] }}</td>
+        <td>{{ repo_data[2] }}</td>
+        <td><a href="{{ repo_data[4] }}" target="_blank">
+            <img src="https://notebooks.gesis.org/binder/badge.svg">
+        </a></td>
+    </tr>
+    {% endfor %}
+  </tbody>
+</table>
+
+
+<h1>Most popular repositories in last month</h1>
+    <table class="table table-hover">
+  <thead>
+    <tr>
+      <th scope="col">Repo</th>
+      <th scope="col">Origin</th>
+      <th scope="col">Provider</th>
+      <th scope="col">Launches</th>
+      <th scope="col"></th>
+    </tr>
+  </thead>
+  <tbody>
+    {% for repo_name, repo_data in popular_repos_1m[:10] %}
+    <tr>
+        <td><a href="{{ repo_data[3] }}" target="_blank">{{ repo_name }}</a></td>
+        <td>{{ repo_data[0] }}</td>
+        <td>{{ repo_data[1] }}</td>
+        <td>{{ repo_data[2] }}</td>
+        <td><a href="{{ repo_data[4] }}" target="_blank">
+            <img src="https://notebooks.gesis.org/binder/badge.svg">
+        </a></td>
+    </tr>
+    {% endfor %}
+  </tbody>
+</table>
+
+
+<h1>Most popular repositories in last 2 month</h1>
+    <table class="table table-hover">
+  <thead>
+    <tr>
+      <th scope="col">Repo</th>
+      <th scope="col">Origin</th>
+      <th scope="col">Provider</th>
+      <th scope="col">Launches</th>
+      <th scope="col"></th>
+    </tr>
+  </thead>
+  <tbody>
+    {% for repo_name, repo_data in popular_repos_all[:10] %}
+    <tr>
+        <td><a href="{{ repo_data[3] }}" target="_blank">{{ repo_name }}</a></td>
+        <td>{{ repo_data[0] }}</td>
+        <td>{{ repo_data[1] }}</td>
+        <td>{{ repo_data[2] }}</td>
+        <td><a href="{{ repo_data[4] }}" target="_blank">
+            <img src="https://notebooks.gesis.org/binder/badge.svg">
+        </a></td>
+    </tr>
+    {% endfor %}
+  </tbody>
+</table>
+
 {% endblock main %}
