--- a/orc_site/templates/page.html
+++ b/orc_site/templates/page.html
@@ -170,6 +170,7 @@
                     <li><a href="{{home_url}}" {% if active == 'home' %}id="navbar-active-a"{% endif %} {% if active == 'home' %}class="gs_active_sub"{% endif %}>Home</a></li>
                     <li><a href="{{jhub_url}}" {% if active == 'login' %}id="navbar-active-a"{% endif %} {% if active == 'login' %}class="gs_active_sub"{% endif %}>Your Server</a></li>
                     <li><a href="{{bhub_url}}" {% if active == 'binder' %}id="navbar-active-a"{% endif %} {% if active == 'binder' %}class="gs_active_sub"{% endif %}>Binder</a></li>
+                    <li><a href="{{gallery_url}}" {% if active == 'gallery' %}id="navbar-active-a"{% endif %} {% if active == 'gallery' %}class="gs_active_sub"{% endif %}>Gallery</a></li>
                   </ul>
                 </div>
               </div>
