--- a/orc_site/templates/gallery.html
+++ b/orc_site/templates/gallery.html
@@ -8,11 +8,7 @@
 {% endif %}
 
 {% block extra_css %}
-{#<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">#}
 <link rel="stylesheet" href="/static/vendor/jquery-ui-1.12.1/jquery-ui.css">
-{#  <link rel="stylesheet" href="/resources/demos/style.css">#}
-{#  <script src="https://code.jquery.com/jquery-1.12.4.js"></script>#}
-{#  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>#}
   <script src="/static/vendor/jquery-ui-1.12.1/jquery-ui.js"></script>
   <script>
   $( function() {
@@ -24,17 +20,19 @@
 {% endblock extra_css %}
 
 {% block main %}
+
 <div id="tabs">
-    <ul>
-        {% for i, title in tabs %}
-        <li><a href="#tabs-{{ i }}">{{ title }}</a></li>
+    <h1>Popular repositories</h1>
+
+    <ul >
+        {% for i, title, _ in popular_repos_all %}
+        <li style="width: 22%;"><a style="width:21%;"   href="#tabs-{{ i }}">{{ title }}</a></li>
         {% endfor %}
     </ul>
 
-    {% for i, title, popular_repos in popular_repos_all %}
+    {% for i, _, popular_repos in popular_repos_all %}
     <div id="tabs-{{ i }}">
-        <h1>{{ title }}</h1>
-        <table class="table table-hover">
+        <table class="table table-hover" style="width:90%;">
             <thead>
             <tr>
                 <th scope="col">Repo</th>
@@ -56,9 +54,75 @@
                     </a></td>
                 </tr>
             {% endfor %}
+                <tr>
+                    <td colspan="5">
+                        <button class="btn input-block-level form-control" style="background-color: #bbbbbb; text-decoration: #0f0f0f;" onclick="">View all</button>
+                    </td>
+                </tr>
             </tbody>
         </table>
     </div>
    {% endfor %}
+    <div>
+        <h1> Created by GESIS</h1>
+        <div>
+            <table class="table table-hover" style="width: 90%;">
+                <thead>
+                <tr>
+                    <th scope="col">Repo</th>
+                    <th scope="col">Org./User</th>
+                    <th scope="col">Provider</th>
+                    <th scope="col">Launches</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr data-toggle="collapse" data-target="#multiCollapseExample2" aria-expanded="false"
+                    aria-controls="multiCollapseExample2">
+                    <td>PTM</td>
+                    <td>gesiscss</td>
+                    <td>github.com</td>
+                    <td><a href=" https://notebooks.gesis.org/binder/v2/gh/gesiscss/ptm/master?filepath=index.ipynb"
+                           target="_blank">
+                        <img src="https://notebooks.gesis.org/binder/badge.svg">
+                    </a></td>
+                </tr>
+                <tr class="collapse multi-collapse" id="multiCollapseExample2">
+                    <td colspan="4">Practical Introduction to Text Mining developed by gesis staff <br> Practical
+                        Introduction to Text Mining developed by gesis staff <br> Practical Introduction to Text Mining
+                        developed by gesis staff
+                    </td>
+                </tr>
+                <tr>
+                    <td>workshop_girls_day</td>
+                    <td>gesiscss</td>
+                    <td>github.com</td>
+                    <td><a href="https://notebooks.gesis.org/binder/v2/gh/gesiscss/workshop_girls_day/master"
+                           target="_blank">
+                        <img src="https://notebooks.gesis.org/binder/badge.svg">
+                    </a></td>
+                </tr>
+                <tr>
+                    <td>gesis-meta-analysis-2018</td>
+                    <td>berndweiss</td>
+                    <td>github.com</td>
+                    <td><a href="https://mybinder.org/v2/gh/berndweiss/gesis-meta-analysis-2018/master" target="_blank">
+                        <img src="https://notebooks.gesis.org/binder/badge.svg">
+                    </a></td>
+                </tr>
+                <tr>
+                    <td>Flow</td>
+                    <td>gesiscss</td>
+                    <td>github.com</td>
+                    <td><a href="https://notebooks.gesis.org/binder/v2/gh/gesiscss/workshop_girls_day/master"
+                           target="_blank">
+                        <img src="https://notebooks.gesis.org/binder/badge.svg">
+                    </a></td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+
+    </div>
 </div>
+
 {% endblock main %}
